Require jquery as npm module.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "underscore": "1.5.x",
+    "jquery": "2.1.x",
     "substance-util": "git+https://github.com/substance/util.git#master",
     "substance-application": "git+https://github.com/substance/application.git#master"
   },
